# mcp.el

./: .gitignore  CLAUDE.md  Makefile  README-MCP-SERVERS.md  README.bash  README.el  README.md  README.mermaid  README.org  TESTS-REPORT.md  audit-jsonrpc-calls.txt  claude_desktop_config.template.json  deploy-mcp-config.sh  mcp-inspector-proxy.el  mcp-inspector.el  mcp-integration-test.el  mcp-memory-test.md  mcp-runner.el  mcp-server-examples.org  mcp-server-test-prompts.md  mcp-server-test-suite.md  mcp-server-test-suite.org  mcp-server-test.el  mcp-servers.el  mcp-test-examples.org  mcp-validation.mermaid  mcp-validation.org  mcp.el  ob-mcp.el  package.json  pyproject.toml  run-mcp-tests.sh  run-servers.sh  servers.org  setup-servers.sh  sjg-evaluate-claude-desktop.sh  validate-config.sh
docs/: RFC-001-makefile-standards.md  STATUS-REPORT-MCP-SERVERS.md  api-reference.md  user-guide.md
examples/: mcp-servers-example.el
examples/filesystem/: connection.el  mcp-fs-list.el  read.el
examples/memory/: connection.el  entity.el  mcp-memory-search.el
tests/: test-basic.el  test-examples.el  test-fs.el  test-mcp.el  test-structure.el
