[tool.poetry]
name = "mcp-el"
version = "0.1.0"
description = ""
authors = ["Jason Walsh <j@wal.sh>"]
readme = "README.md"
packages = [{include = "mcp"}]

[tool.poetry.dependencies]
mcp-server-git = "^0.1.0"
uvx = "^0.1.0"
mcp-server-git = "^0.1.0"
uvx = "^0.1.0"
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
